# alphasec-rust-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: account_info.rs  basic_market_data.rs  cancel_all_orders.rs  deposit_withdraw.rs  get_balance.rs  get_market_data.rs  get_tickers.rs  get_tokens.rs  get_transfer_history.rs  perp_order.rs  perp_query.rs  perp_websocket.rs  place_buy_order.rs  place_sell_order.rs  session.rs  simple_trading.rs  transfer_kaia.rs  transfer_tokens.rs  transfer_usdt.rs  websocket.rs
src/: error.rs  lib.rs
src/agent/: agent.rs  mod.rs
src/api/: client.rs  mod.rs  utils.rs
src/perp/: agent.rs  client.rs  mod.rs  types.rs  ws.rs
src/signer/: config.rs  mod.rs  perp_transaction.rs  signer.rs  transaction.rs  utils.rs
src/types/: account.rs  api.rs  constants.rs  market.rs  mod.rs  orders.rs  websocket.rs
src/websocket/: manager.rs  mod.rs  trade.rs
